--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   lottie: ^1.1.0
+  http: ^0.13.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +52,6 @@ flutter:
   assets:
     - assets/images/restaurant.png
     - assets/animations/restaurant.json
-    - assets/local_restaurant.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
